fix: change mobile spacing

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -56,8 +56,8 @@ body {
     display: none;
   }
   .section {
-    margin-top: 7rem;
-    margin-bottom: 7rem;
+    margin-top: 4rem;
+    margin-bottom: 4rem;
   }
   .sr-only {
     position: absolute;
